# RabbitWebSocketChat

./: .gitignore  pyproject.toml
docs/: TODO.md
rabbitwebsocketchat/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  repository.py  router.py  schemas.py  service.py
rabbitwebsocketchat/repositories/: auth_repository.py  redis_repository.py  repository.py  user_repository.py
